--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "node scripts/postinstall-playwright.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.8",
+    "@sparticuz/chromium": "^143.0.4",
     "chromedriver": "^143.0.4",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
-    "playwright": "^1.57.0",
+    "playwright-core": "^1.57.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "selenium-webdriver": "^4.15.0"
