--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chromedriver": "^143.0.4",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
+    "openai": "^6.16.0",
     "playwright-core": "^1.57.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
