--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.8",
     "@sparticuz/chromium": "^143.0.4",
+    "cheerio": "^1.2.0",
     "chromedriver": "^143.0.4",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
