--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.975.0",
+    "@playwright/test": "^1.58.0",
     "@react-google-maps/api": "^2.20.8",
     "@sparticuz/chromium": "^143.0.4",
     "@supabase/supabase-js": "^2.93.2",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "openai": "^6.16.0",
+    "playwright": "^1.58.0",
     "playwright-core": "^1.57.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
