Add postinstall script for Playwright browser installation and update troubleshooting docs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx playwright install chromium"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.975.0",
