--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx playwright install chromium"
+    "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.975.0",
